--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+
+    <!-- Register Fragment -->
+    <string name="googleSignInClient_serverClientId">291261739017-8vrqq5dc7vb5gahio769oeq61rnb366a.apps.googleusercontent.com</string>
+
+
     <!-- Register Fragment -->
     <string name="register_fragment_snackbar_message_firebase_auth_weak_password_exception">Sua senha precisa de, no mínimo 6 dígitos</string>
     <string name="register_fragment_snackbar_message_firebase_auth_Invalid_credentials_Exception">Email inválido</string>
@@ -17,7 +22,31 @@
     <string name="register_fragment_text_field_error_email_required">Email necessário</string>
     <string name="register_fragment_text_field_error_password_required">Senha necessária</string>
     <string name="register_fragment_text_field_error_different_password">Senhas diferentes</string>
-    
-    
-    
+
+
+    <!-- Login Fragment -->
+    <string name="login_fragment_text_field_hint_email">Email</string>
+    <string name="login_fragment_text_field_hint_password">Senha</string>
+    <string name="login_fragment_loginButton">Acessar</string>
+    <string name="login_fragment_text_field_error_email_required">Email necessário</string>
+    <string name="login_fragment_text_field_error_password_required">Senha necessária</string>
+    <string name="login_fragment_snackbar_message_firebase_auth_Invalid_user_Exception">Usuário inválido</string>
+    <string name="login_fragment_snackbar_message_firebase_auth_Invalid_credentials_Exception">Email ou senha incorretos</string>
+    <string name="login_fragment_snackbar_message_unknown_error">Erro desconhecido</string>
+    <string name="login_fragment_snackbar_message_login_success">Sucesso ao entrar</string>
+    <string name="login_fragment_snackbar_message_login_success_googleAccount">Sucesso ao entrar com conta Google</string>
+    <string name="login_fragment_snackbar_message_login_error_googleAccount">Erro ao entrar com conta Google</string>
+    <string name="login_fragment_registerButton">Cadastrar</string>
+
+
+    <!-- Facebook -->
+
+    <string name="facebook_app_id">172559435542270</string>
+    <string name="fb_login_protocol_scheme">fb172559435542270</string>
+    <string name="facebook_client_token">757d1efebbc1a4cc3932929b69d1cfd0</string>
+
+
+
+
+
 </resources>
