--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,11 @@
     <string name="facebook_client_token">757d1efebbc1a4cc3932929b69d1cfd0</string>
 
     <!-- Disciplines Fragment -->
-    <string name="fab_insert_content_desc">Floating action insert discipline</string>
+    <string name="fragment_disciplines_fab_insert_content_desc">Floating action insert discipline</string>
+    <string name="fragment_disciplines_img_content_desc_favorite">Favorite flag</string>
+    <string name="fragment_disciplines_img_content_desc_discipline">Discipline image</string>
+    <string name="fragment_disciplines_messageStudent">O que vamos estudar hoje?</string>
+    <string name="fragment_disciplines_img_content_student">student image</string>
 
 
 </resources>
