--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,12 +54,25 @@
     <string name="facebook_client_token">757d1efebbc1a4cc3932929b69d1cfd0</string>
 
     <!-- Disciplines Fragment -->
-    <string name="fragment_disciplines_fab_insert_content_desc">Floating action insert discipline</string>
-    <string name="fragment_disciplines_img_content_desc_favorite">Favorite flag</string>
-    <string name="fragment_disciplines_img_content_desc_discipline">Discipline image</string>
-    <string name="fragment_disciplines_messageStudent">O que vamos estudar hoje?</string>
-    <string name="fragment_disciplines_img_content_student">student image</string>
-    <string name="fragment_discipline_switch_favorite_label">Apenas Favoritas</string>
+    <string name="disciplines_fragment_toolbat_title">Disciplinas</string>
+    <string name="disciplines_fragment_fab_insert_content_desc">Floating action insert discipline</string>
+    <string name="disciplines_fragment_img_content_desc_favorite">Favorite flag</string>
+    <string name="disciplines_fragment_img_content_desc_discipline">Discipline image</string>
+    <string name="disciplines_fragment_messageStudent">O que vamos estudar hoje?</string>
+    <string name="disciplines_fragment_img_content_student">student image</string>
+    <string name="discipline_fragment_switch_favorite_label">Apenas Favoritas</string>
+
+    <!-- Dictionary Fragment -->
+    <string name="dictionary_fragment_toolbar_title">Dicionário</string>
+
+
+    <!-- Pomodoro Fragment -->
+    <string name="pomodoro_fragment_toolbar_title">Pomodoro</string>
+
+
+
+    <!-- Public Tender Fragment -->
+    <string name="public_tender_fragment_toolbar_title">Concursos</string>
 
 
 </resources>
