--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,27 @@
     <string name="public_tender_fragment_toolbar_title">Concursos</string>
 
 
+    <!-- Discipline Form Fragment -->
+    <string name="discipline_form_fragment_text_field_hint_name">Nome da Disciplina</string>
+    <string name="discipline_form_fragment_text_field_hint_description">Descrição</string>
+    <string name="discipline_form_fragment_text_field_description_helper">Opcional</string>
+    <string name="discipline_form_fragment_text_field_name_error">Campo vazio</string>
+    <string name="discipline_form_fragment_startTimeButton">Horário Inicial</string>
+    <string name="discipline_form_fragment_endTimeButton">Horário Final</string>
+    <string name="discipline_form_fragment_fab_img_content_desc">Floating action insert photo</string>
+    <string name="discipline_form_fragment_fab_done_content_desc">done</string>
+    <string name="discipline_form_fragment_title_timePicker_start">Selecione a hora de começar</string>
+    <string name="discipline_form_fragment_title_timePicker_end">Selecione a hora de encerrar</string>
+
+
+
+
+    <!-- Discipline Form Dialog -->
+    <string name="discipline_form_dialog_button_load">Carregar</string>
+    <string name="discipline_form_dialog_text_field_hint_url">URL da imagem</string>
+
+    <!-- Common -->
+    <string name="common_confirm">Confirmar</string>
+    <string name="common_cancel">Cancelar</string>
+
 </resources>
