ainda no formulário

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,10 +76,12 @@
 
 
     <!-- Discipline Form Fragment -->
-    <string name="discipline_form_fragment_text_field_hint_name">Nome da Disciplina</string>
-    <string name="discipline_form_fragment_text_field_hint_description">Descrição</string>
+    <string name="discipline_form_fragment_text_field_name_hint">Nome da Disciplina</string>
+    <string name="discipline_form_fragment_text_field_description_hint">Descrição</string>
     <string name="discipline_form_fragment_text_field_description_helper">Opcional</string>
     <string name="discipline_form_fragment_text_field_name_error">Campo vazio</string>
+    <string name="discipline_form_fragment_text_field_guests_hint">Convidados</string>
+    <string name="discipline_form_fragment_text_field_guests_helper">Adicionar e-mails de convidados separados por vírgula</string>
     <string name="discipline_form_fragment_startTimeButton">Horário Inicial</string>
     <string name="discipline_form_fragment_endTimeButton">Horário Final</string>
     <string name="discipline_form_fragment_fab_img_content_desc">Floating action insert photo</string>
@@ -90,6 +92,7 @@
     <string name="discipline_form_fragment_title_timePicker_end">Selecione a hora de encerrar</string>
     <string name="discipline_form_fragment_title_dataPicker">Selecione o(s) dia(s) que deseja estudar</string>
     <string name="discipline_form_fragment_snackBarMessage_emptyDate">Data vazia</string>
+    <string name="discipline_form_fragment_addReminder_switch">Adicionar como evento na agenda?</string>
 
 
 
