--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,9 @@
     <string name="discipline_form_confirm_dialog_title">Confirmar disciplina</string>
     <string name="discipline_form_confirm_dialog_message">Confirmar adição de uma nova disciplina?</string>
 
+    <!-- Load Alert Dialog -->
+    <string name="load_alert_dialog_text_search">Buscando...</string>
+
     <!-- Public Tender Suggestion Dialog -->
     <string name="public_tender_suggestion_dialog_text_view_title">Envie sua recomendação de plataforma para concursos públicos</string>
     <string name="public_tender_suggestion_dialog_text_field_hint_name">Nome da Plataforma</string>
