--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
 
     <!--Menu drawer -->
     <string name="header_drawer_subtitle">Desenvolvido por Leonardo Tissi</string>
+    <string name="header_drawer_greeting">Bem-vindo de volta,\n</string>
+    <string name="header_drawer_user_email">%s</string>
+    <string name="header_drawer_concatenated_text">%1$s %2$s</string>
     <string name="drawer_menu_item_disciplines">Disciplinas</string>
     <string name="drawer_menu_item_tools">Ferramentas</string>
     <string name="drawer_menu_item_dictionary">Dicionário</string>
